tests/bad/enum_has_no_field.glaz
enum A {
  B
}

fn main() {
  let mut x = A::C;
}
